Screenshots and readme file included

--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_arrow_white"
         android:id="@+id/image_exit"
-        android:contentDescription="back"
+        android:contentDescription="@string/back"
         android:layout_margin="15dp"
         app:tint="@color/white_2"
         />
@@ -80,11 +80,13 @@
                     android:layout_width="0dp"
                     android:layout_weight=".5"
                     android:layout_height="wrap_content"
-                    android:hint="First Name"
+                    android:hint="@string/first_name"
+                    android:inputType="textPersonName"
                     android:textColorHint="@color/grey_black"
                     android:background="@drawable/submit_bg"
                     android:layout_margin="15dp"
                     android:padding="10dp"
+                    android:autofillHints="Last Name"
                     android:textColor="@color/colorPrimaryDark"
                     android:id="@+id/edit_firstname"
                     android:maxLines="1"
@@ -99,6 +101,8 @@
                     android:background="@drawable/submit_bg"
                     android:layout_margin="15dp"
                     android:padding="10dp"
+                    android:autofillHints="Last Name"
+                    android:inputType="textPersonName"
                     android:textColor="@color/colorPrimaryDark"
                     android:id="@+id/edit_lastname"
                     android:maxLines="1"
@@ -111,7 +115,9 @@
                 android:textColorHint="@color/grey_black"
                 android:background="@drawable/submit_bg"
                 android:layout_margin="15dp"
+                android:inputType="textEmailAddress"
                 android:padding="10dp"
+                android:autofillHints="email"
                 android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/edit_email"
                 android:maxLines="1"
@@ -120,11 +126,13 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Project on GITHUB (link)"
+                android:hint="@string/project_on_github_link"
                 android:textColorHint="@color/grey_black"
                 android:background="@drawable/submit_bg"
                 android:layout_margin="15dp"
                 android:padding="10dp"
+                android:autofillHints="GitHub"
+                android:inputType="textMultiLine"
                 android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/edit_githublink"
                 android:maxLines="1"
